--- a/rabbitmq-example/pom.xml
+++ b/rabbitmq-example/pom.xml
@@ -38,6 +38,9 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>3.1.0</version>
+            <configuration>
+                <mainClass>com.example.Receive</mainClass>
+            </configuration>
             <executions>
                 <execution>
                     <goals>
